--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ input[type="submit"],#PPMiniCart .minicart-submit,.w3ls_vegetables ul li a,input
 	-ms-transition: .5s ease-in;
 }
 .agileits_header {
-    background: #283c4c;
+    background: #2c336f;
     padding: 12px 0;
 }
 .w3l_offers {
