modified home page

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ ul.multi-column-dropdown h6 {
 }
 .top-brands{
     background: #f5f5f5;
-	padding:5em 0;
+	padding:2em 0;
 }
 .agile_top_brand_left_grid1 p{
 	color:#212121;
@@ -1356,8 +1356,8 @@ ul.faq {
 }
 /*-- //single --*/
 .brands {
-    padding: 5em 0;
-    background: #eed3b6;
+    padding: 3em 0;
+    background: #a7a5a9;
 }
 .brands-w3l {
     text-align: center;
